Fix MongoDB URL and add news router

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGODB_URL=mongodb+srv://ireport:!report@ireport.bq7gso9.mongodb.net/
+MONGODB_URL=mongodb+srv://ireport:!report@ireport.bq7gso9.mongodb.net
