--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,4 @@
-MONGODB_URL=mongodb+srv://ireport:!report@ireport.bq7gso9.mongodb.net
+PORT=8000
+JWT_SECRET=abc123
+NODE_ENV=development
+MONGODB_URL=mongodb+srv://ireport:!report@ireport.bq7gso9.mongodb.net/iReport
