--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,8 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.19",
     "nodemon": "^3.0.3",
+    "postcss": "^8.4.35",
+    "postcss-comment": "^2.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
