Update code: Delete newsSlice.ts, update .gitignore, add roles and userImage to UserProfileData, add openRouter, update App.tsx, update Article model, update articleController.ts, update Profile.tsx

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 # dependencies
 /frontend/node_modules
 /backend/node_modules
+/frontend/coverage
+/backend/coverage
+/frontend/.env
+/backend/.env
+
 
 # testing
 /frontend/coverage
