--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,13 +18,14 @@
     "@types/react-dom": "^18.2.19",
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
+    "init": "^0.1.2",
     "mdb-react-ui-kit": "^7.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "typescript": "^4.9.5",
