--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,6 +61,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/react-beautiful-dnd": "^13.1.8",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
