Update articleController to save drafts with author ID

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,7 +7,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    "types": ["node", "cors"], // Include 'node' and 'cors' type definitions
+    "types": ["node", "cors","jest"], // Include 'node' and 'cors' type definitions
     "lib": ["ES2015"] // Specify the JavaScript library to include (e.g., ES2015)
   },
   "include": ["src/**/*"], // Include all TypeScript files under the 'src' directory
