--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "typescript": "^4.9.5",
@@ -63,6 +64,7 @@
     "@types/axios": "^0.14.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-toastify": "^4.1.0",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
