--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "^5.0.1",
@@ -64,6 +65,7 @@
     "@types/axios": "^0.14.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-modal": "^3.16.3",
     "@types/react-toastify": "^4.1.0",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
