--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@tensorflow/tfjs-node": "^4.20.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cloudinary": "^2.2.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
