--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
     "axios": "^1.6.8",
+    "cloudinary": "^2.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "init": "^0.1.2",
