--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,29 @@
-FROM node:16.20.2
+# Use the official Node.js 16 image as the base image
+FROM node:16
 
+# Set the working directory inside the container
 WORKDIR /app
 
-COPY ./package*.json ./
+# Copy the package.json and package-lock.json files to the working directory
+COPY package*.json ./
 
+# Update npm to a compatible version and increase network timeout
+RUN npm install -g npm@8.19.4 && npm config set fetch-retry-mintimeout 20000 && npm config set fetch-retry-maxtimeout 120000
+
+# Install the dependencies
 RUN npm install
 
-COPY ./ .
+# Copy the rest of the application code to the working directory
+COPY . .
 
+# Build the React app
+RUN npm run build
+
+# Install serve to serve the build directory
+RUN npm install -g serve
+
+# Expose the port that the app runs on
 EXPOSE 3000
 
-CMD ["npm", "start"]
+# Command to run the application
+CMD ["serve", "-s", "build"]
