--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,23 +1,15 @@
-# Use the official Node.js 16 image as the base image
-FROM node:16
+FROM node:16.20.2
 
-# Set the working directory inside the container
+ENV MONGODB_URL=mongodb+srv://ireport:!report@ireport.bq7gso9.mongodb.net/iReport
+
 WORKDIR /app
 
-# Copy the package.json and package-lock.json files to the working directory
-COPY package*.json ./
+COPY ./package*.json ./
 
-# Install a compatible version of npm and increase network timeout
-RUN npm install -g npm@8.19.4 && npm config set fetch-retry-mintimeout 20000 && npm config set fetch-retry-maxtimeout 120000
-
-# Install the dependencies
 RUN npm install
 
-# Copy the rest of the application code to the working directory
 COPY . .
 
-# Expose the port that the app runs on
-EXPOSE 5000
+EXPOSE 8000
 
-# Command to run the application
-CMD ["npm", "start"]
+CMD ["npm", "run", "dev"]
